# exult-ios

./: .clang-tidy  .cvsignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  ChangeLog  ChangeLog.audio  FAQ  INSTALL  Info-ios.plist.in  Info.plist.in  Makefile.MorphOS  Makefile.am  Makefile.be  Makefile.common  Makefile.cygwin  Makefile.in  Makefile.mingw  Makefile.studio.mingw  Makefile.studio.win32  Makefile.win32  MidiInfo.txt  NEWS  README  README.1ST  README.Alpha  README.AmigaOS  README.MacOSX  README.Qtopia  README.md  README.win32  TODO  TODO.xml  acconfig.h  acinclude.m4  actions.cc  actions.h  actorio.cc  (+156 more)
audio/: .cvsignore  Audio.cc  Audio.h  AudioChannel.cc  AudioChannel.h  AudioMixer.cc  AudioMixer.h  AudioSample.cc  AudioSample.h  Flex.cc  Flex.h  IFF.h  Makefile  Makefile.am  Makefile.in  Midi.cc  Midi.h  Mixer.cc  Mixer.h  OggAudioSample.cc  OggAudioSample.cpp  OggAudioSample.h  README  RawAudioSample.cc  RawAudioSample.h  SDL_mapping.cc  SDL_mapping.h  Table.cc  VocAudioSample.cc  VocAudioSample.cpp  VocAudioSample.h  WavAudioSample.cc  conv.cc  conv.h  convmusic.h  module.mk  mtest  pcb.cc  pcb.h  soundtest.cc  (+5 more)
conf/: .cvsignore  Configuration.cc  Configuration.h  Makefile.am  Makefile.in  README  XMLEntity.cc  XMLEntity.h  config.xml  module.mk  xmain.cc  xmldump.cc  xmlparse.cc
data/: .cvsignore  Makefile.am  README  aud_enabled.shp  aud_ok.shp  audiooptions.shp  bginclude.uc  black_gate.shp  bodies_si.txt  cheating.shp  credits.txt  default.key  defaultkeys.txt  extras.shp  exult.flx  exult0.pal  exult_bg_flx.h  exult_credits.shp  exult_flx.h  exult_iphone.flx  exult_iphone_flx.h  exult_logo.shp  exult_si.flx  exult_si_flx.h  exultmsg.txt  exultmsg_de.txt  exultmsg_es.txt  exultmsg_fr.txt  flx.in  fonton.shp  gam_audio.shp  gam_loadsave.shp  gam_video.shp  gamemenu.shp  gorget.shp  hoe_of_destruction.shp  magicgorget.shp  miscoptions.shp  myusecode.uc  newvideooptions.shp  (+29 more)
files/: Flat.cc  Flat.h  Flex.cc  Flex.h  IFF.cc  IFF.h  Makefile.am  Makefile.in  Table.cc  Table.h  U7file.cc  U7file.h  U7fileman.cc  U7fileman.h  U7obj.cc  U7obj.h  crc.cc  crc.h  databuf.h  listfiles.cc  listfiles.h  module.mk  msgfile.cc  msgfile.h  rwregress.cc  snprintf.cc  test.cc  utils.cc  utils.h
flic/: .cvsignore  Makefile.am  play.cc  playfli.cc  playfli.h
gamemgr/: Makefile.am  bggame.cc  bggame.h  devgame.cc  devgame.h  modmgr.cc  modmgr.h  sigame.cc  sigame.h
gumps/: Actor_gump.cc  Actor_gump.h  AudioOptions_gump.cc  AudioOptions_gump.h  Book_gump.cc  Book_gump.h  CombatOptions_gump.cc  CombatOptions_gump.h  CombatStats_gump.cc  CombatStats_gump.h  Enabled_button.cc  Enabled_button.h  Face_button.cc  Face_button.h  Face_stats.cc  Face_stats.h  File_gump.cc  File_gump.h  Gamemenu_gump.cc  Gamemenu_gump.h  GameplayOptions_gump.cc  GameplayOptions_gump.h  Gump.cc  Gump.h  Gump_ToggleButton.cc  Gump_ToggleButton.h  Gump_button.cc  Gump_button.h  Gump_factory.cc  Gump_factory.h  Gump_manager.cc  Gump_manager.h  Gump_model.cc  Gump_model.h  Gump_widget.cc  Gump_widget.h  Jawbone_gump.cc  Jawbone_gump.h  Keyboard_gump.cc  Keyboard_gump.h  (+40 more)
imagewin/: ArbScaler.h  BilinearScaler.cpp  BilinearScaler.h  BilinearScalerInternal.h  BilinearScalerInternal_2x.cpp  BilinearScalerInternal_Arb.cpp  BilinearScalerInternal_X1Y12.cpp  BilinearScalerInternal_X2Y24.cpp  Makefile.am  PointScaler.cpp  PointScaler.h  hq2x.cc  ibuf16.cc  ibuf16.h  ibuf8.cc  ibuf8.h  imagebuf.cc  imagebuf.h  imagescl.cc  imagewin.cc  imagewin.h  iwin8.cc  iwin8.h  manip.h  savepcx.cc  scale.cc  scale.h  scale_2x.cc  scale_2x.h  scale_2xSaI.cc  scale_2xSaI.h  scale_bilinear.cc  scale_bilinear.h  scale_gl.cc  scale_hq2x.cc  scale_hq2x.h  scale_hq3x.cc  scale_hq3x.h  scale_hq4x.cc  scale_hq4x.h  (+7 more)
mapedit/: .cvsignore  Makefile.am  Makefile.mingw  Makefile.studio.cygwin  Makefile.studio.mingw  bargeedit.cc  chunklst.cc  chunklst.h  combo.cc  combo.h  compile.cc  contedit.cc  dirbrowser.cc  eggedit.cc  execbox.cc  execbox.h  exult_studio.cc  exult_studio.def  exult_studio.glade  exult_studio_win32.cc  exultstudio.cc  gimpwin32.txt  gladehack.cc  gtk_redefines.h  locator.cc  locator.h  maps.cc  modmgr.cc  modmgr.h  npcedit.cc  npclst.cc  npclst.h  objbrowse.cc  objbrowse.h  objedit.cc  paledit.cc  paledit.h  paltest.cc  shapedraw.cc  shapedraw.h  (+17 more)
npc/: Makefile.am  Makefile.in  makefile
objs/: Makefile.am  animate.cc  animate.h  barge.cc  barge.h  chunks.cc  chunks.h  chunkter.cc  chunkter.h  citerate.h  contain.cc  contain.h  egg.cc  egg.h  find_nearby.h  flags.h  iregobjs.cc  iregobjs.h  jawbone.cc  jawbone.h  mappatch.cc  mappatch.h  objclient.cc  objclient.h  objiter.cc  objiter.h  objlist.h  objnames.cc  objs.cc  objs.h  ordinfo.h  spellbook.cc  spellbook.h  virstone.cc  virstone.h
pathfinder/: Astar.cc  Astar.h  Makefile.am  Makefile.in  PathFinder.cc  PathFinder.h  Zombie.cc  Zombie.h  path.cc
shapes/: Makefile.am  ammoinf.cc  aniinf.h  baseinf.h  bodies.cc  bodies.h  bodyinf.cc  continf.h  data_utils.h  effhpinf.cc  effhpinf.h  expinf.cc  font.cc  font.h  fontgen.cc  fontgen.h  fontvga.cc  fontvga.h  frnameinf.h  frpowers.cc  frpowers.h  glshape.cc  glshape.h  items.cc  items.h  miscinf.cc  miscinf.h  monstinf.cc  monstinf.h  objdollinf.h  pngio.cc  pngio.h  ready.h  sfxinf.cc  sfxinf.h  shapeinf.cc  shapeinf.h  shapevga.cc  shapevga.h  shapewrite.cc  (+7 more)
tools/: .cvsignore  Makefile.am  cmanip.cc  expack.cc  gnome_shp_thumbnailer.cc  gnome_shp_thumbnailer.schemas.in  gnome_u7shapes.thumbnailer.in  ipack.cc  ipack.txt  mklink.c  mklink.cc  rip.c  rip.cc  shp2pcx.cc  splitshp.cc  textpack.cc  txt2cc.cc  u7shpload.c  u7voice2syx.cc  uccparse.y  ucdump.c  uctools.h  wuc.c  wuc.cc  wud.c  wud.cc
usecode/: Makefile.am  bgintrinsics.h  conversation.cc  conversation.h  debugmsg.h  debugserver.cc  debugserver.h  intrinsics.cc  keyring.cc  keyring.h  opcodes.h  sibetaintrinsics.h  siintrinsics.h  stackframe.cc  stackframe.h  ucdebugging.cc  ucdebugging.h  ucdisasm.cc  ucfunction.cc  ucfunction.h  ucfunids.h  ucinternal.cc  ucinternal.h  ucmachine.cc  ucmachine.h  ucsched.cc  ucsched.h  ucscriptop.h  (+7 more)
(+4999 files in other folders)
